@@ -6,10 +6,8 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.context.annotation.PropertySource;
 import org.springframework.core.env.Environment;
-import org.springframework.http.HttpMethod;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
-import org.springframework.lang.NonNull;
 
 import java.io.IOException;
 import java.util.List;
@@ -27,25 +25,22 @@ public class ApiKeyFilter extends OncePerRequestFilter {
     private static final Logger log = LoggerFactory.getLogger(ApiKeyFilter.class);
     private static final String API_KEY_HEADER = "X-API-KEY";
     private final String expectedApiKey;
-    private static final List<String> WHITELIST = List.of(
-            "/admin/login",
-            "/admin/create-user",
-            "/api/client/redde/callback",
-            "/api/client/hubtel/callback",
-            "/swagger-ui.html",
-            "/swagger-ui/",
-            "/swagger-ui/index.html",
-            "/v3/api-docs",
-            "/v3/api-docs/",
-            "/v3/api-docs/swagger-config",
-            "/swagger-resources",
-            "/swagger-resources/",
-            "/webjars/"
+
+    // Public routes (no API key)
+    private static final List<String> PUBLIC_PREFIXES = List.of(
+        "/admin/login",
+        "/admin/create-user",
+        "/api/client/redde/callback",
+        "/api/client/hubtel/callback",
+        "/swagger-ui",
+        "/v3/api-docs",
+        "/swagger-resources",
+        "/webjars"
     );
 
-    public ApiKeyFilter(Environment environment) {
-        String rawKey = environment.getProperty("application.api.key");
-        if (rawKey == null || rawKey.trim().isEmpty()) {
+    public ApiKeyFilter(Environment env) {
+        String rawKey = env.getProperty("application.api.key");
+        if (rawKey == null || rawKey.isBlank()) {
             throw new IllegalStateException("API key must be configured via application.api.key");
         }
         this.expectedApiKey = rawKey.trim();
@@ -54,46 +49,35 @@ public class ApiKeyFilter extends OncePerRequestFilter {
     @Override
     protected boolean shouldNotFilter(HttpServletRequest request) {
         String path = request.getRequestURI();
-        log.info("JwtFilter: Checking if path is whitelisted: {}", path);
-        // Exact match, or remove trailing slash if needed
-        return WHITELIST.contains(path) || WHITELIST.contains(path.replaceAll("/$", ""));
+        if ("OPTIONS".equalsIgnoreCase(request.getMethod())) return true;
+
+        // Skip anything under the public prefixes
+        boolean isPublic = PUBLIC_PREFIXES.stream().anyMatch(path::startsWith);
+        if (isPublic) return true;
+
+        // Enforce API key **only** for /api/*
+        boolean isApi = path.startsWith("/api/");
+        return !isApi;
     }
 
     @Override
-    protected void doFilterInternal(
-            @NonNull HttpServletRequest request,
-            @NonNull HttpServletResponse response,
-            @NonNull FilterChain filterChain) throws ServletException, IOException {
+    protected void doFilterInternal(HttpServletRequest req, HttpServletResponse res, FilterChain chain)
+            throws IOException, ServletException {
 
-        if (HttpMethod.OPTIONS.matches(request.getMethod())) {
-            filterChain.doFilter(request, response);
+        final String provided = req.getHeader(API_KEY_HEADER);
+        if (provided == null || !expectedApiKey.equals(provided.trim())) {
+            log.warn("ApiKeyFilter: invalid/missing X-API-KEY on {}", req.getRequestURI());
+            res.setStatus(HttpServletResponse.SC_FORBIDDEN);
+            res.setContentType("application/json");
+            res.getWriter().write("{\"error\":\"invalid_api_key\"}");
             return;
         }
 
-        String headerKey = request.getHeader(API_KEY_HEADER);
-        if (headerKey != null) {
-            String providedKey = headerKey.trim();
+        // Optionally set a ROLE for downstream @PreAuthorize checks
+        var auth = new UsernamePasswordAuthenticationToken(
+            "apiClient", null, List.of(new SimpleGrantedAuthority("ROLE_API")));
+        SecurityContextHolder.getContext().setAuthentication(auth);
 
-            if (expectedApiKey.equals(providedKey)) {
-                UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(
-                        "apiClient",
-                        null,
-                        List.of(new SimpleGrantedAuthority("ROLE_API"))
-                );
-                SecurityContextHolder.getContext().setAuthentication(auth);
-                log.debug("API key authentication successful.");
-            } else {
-                log.warn("Invalid API Key provided. Provided: [{}] | Expected: [{}]", providedKey, expectedApiKey);
-                log.warn("Provided chars: {}", providedKey.chars().boxed().toList());
-                log.warn("Expected chars: {}", expectedApiKey.chars().boxed().toList());
-
-                response.setStatus(HttpServletResponse.SC_FORBIDDEN);
-                response.getWriter().write("Forbidden: Invalid API Key");
-                return;
-            }
-        }
-
-        // Let other filters handle if no key was provided
-        filterChain.doFilter(request, response);
+        chain.doFilter(req, res);
     }
 }
